cli-test/resource-multi-sigs.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service3
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9376
  selector:
    app: MyApp
