cli-test/resource-sig.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9376
  selector:
    app: MyApp
