cli-test/validate-manifests-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-resources
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: validate-resources
      match:
        resources:
          kinds:
            - Service
          name: test*
      validate:
        manifests:
          attestors:
          - count: 1
            entries:
            - keys:
                # pub
                publicKeys: |-
                    -----BEGIN PUBLIC KEY-----
                    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
                    -----END PUBLIC KEY-----
            - keys:
                # pub1
                publicKeys: |-
                    -----BEGIN PUBLIC KEY-----
                    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEE8uGVnyDWPPlB7M5KOHRzxzPHtAy
[...]
                    -----END PUBLIC KEY-----
    - name: validate-resources-all-sig
      match:
        resources:
          kinds:
            - Service
          name: test*
      validate:
        manifests:
          attestors:
          - entries:
            - keys:
                # pub
                publicKeys: |-
                    -----BEGIN PUBLIC KEY-----
                    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
                    -----END PUBLIC KEY-----
            - keys:
                # pub1
                publicKeys: |-
                    -----BEGIN PUBLIC KEY-----
                    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEE8uGVnyDWPPlB7M5KOHRzxzPHtAy
[...]
                    -----END PUBLIC KEY-----
